Delegate to compiler for invalid expressions